<resources>
    <string name="app_name">Sales Quotation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nama_aplikasi">JVM</string>
    <string name="allData">Semua Sales Quotation</string>
    <string name="find_recipe">Cari data…</string>
    <string name="item">+ ADD ITEM</string>
    <string name="produk">Produk</string>
    <string name="_23">23</string>
    <string name="nama_alat">Nama Alat</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="cd_img_pet">imgproduk</string>
    <string name="cd_icon_location">Lokasi</string>
    <string name="lokasi">Lokasi</string>
    <string name="harga">Harga</string>
    <string name="stok">Stok</string>
    <string name="warna">Warna</string>
    <string name="berat">Berat</string>
    <string name="deskripsi">deskripsi</string>
    <string name="asuransi">Asuransi</string>
    <string name="deskripsi_produk">Deskripsi Produk</string>
    <string name="add_data">Tambah Data</string>

    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="submit">Submit</string>
    <string name="delete">Hapus</string>
    <string name="date">Date</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="message_ok">OK</string>
    <string name="cancel">Batal</string>
    <string name="empty">Field can not be blank</string>
    <string name="update">Update</string>
    <string name="change">Ubah Data</string>
    <string name="add">Tambah Data</string>
    <string name="save">Simpan</string>
    <string name="message_cancel">Apakah anda ingin membatalkan perubahan pada form?</string>
    <string name="message_delete">Apakah anda yakin ingin menghapus item ini?</string>
    <string name="added">Satu item berhasil ditambahkan</string>
    <string name="changed">Satu item berhasil diubah</string>
    <string name="deleted">Satu item berhasil dihapus</string>
    <string name="information">Tidak ada data ditemukan</string>
    <string name="detail_item">Detail Item</string>
    <string name="nama_item">Nama Item</string>
    <string name="Item">Item</string>
    <string name="item_description">Item Description</string>
    <string name="qty">Quantity</string>
    <string name="satuan">Satuan</string>
    <string name="unit_price">Unit Price</string>
    <string name="disc">Disc %</string>
    <string name="tax">Tax</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="subtotal">Subtotal</string>
    <string name="total_tax">Tax %</string>
    <string name="lorem">"Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.  Why do we use it? It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).  "</string>
    <string name="total">Total</string>

    <array name="unit">
        <item>Unit</item>
        <item>Pcs</item>
    </array>
</resources>